@@ -1,5 +1,13 @@
 2006-06-13  Steve Frécinaux  <steve@istique.net>
 
+	* bindings/python/Makefile.am: make sure gedit-enum-types.h is generated
+	before the bindings are built.
+
+	* gedit/Makefile.am: fix generation of gedit-enum-types.h in $builddir
+	instead of $srcdir.
+
+2006-06-13  Steve Frécinaux  <steve@istique.net>
+
 	* gedit/gedit-tab.c:
 	* gedit/gedit-window.c:
 
